// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rux-input renders 1`] = `
<rux-input value="">
  <mock:shadow-root>
    <div class="rux-form-field" part="form-field">
      <label aria-hidden="true" class="rux-input-label" htmlfor="rux-input-1" part="label">
        <span class="hidden">
          <slot name="label"></slot>
        </span>
      </label>
      <input aria-invalid="false" class="rux-input rux-input--medium" id="rux-input-1" type="text" value="">
    </div>
  </mock:shadow-root>
  <input class="aux-input" type="hidden" value="">
</rux-input>
`;

exports[`rux-input renders label prop 1`] = `
<rux-input label="hello" value="">
  <mock:shadow-root>
    <div class="rux-form-field" part="form-field">
      <label aria-hidden="false" class="rux-input-label" htmlfor="rux-input-2" part="label">
        <span>
          <slot name="label">
            hello
          </slot>
        </span>
      </label>
      <input aria-invalid="false" class="rux-input rux-input--medium" id="rux-input-2" type="text" value="">
    </div>
  </mock:shadow-root>
  <input class="aux-input" type="hidden" value="">
</rux-input>
`;

exports[`rux-input renders label slot 1`] = `
<rux-input value="">
  <mock:shadow-root>
    <div class="rux-form-field" part="form-field">
      <label aria-hidden="false" class="rux-input-label" htmlfor="rux-input-3" part="label">
        <span>
          <slot name="label"></slot>
        </span>
      </label>
      <input aria-invalid="false" class="rux-input rux-input--medium" id="rux-input-3" type="text" value="">
    </div>
  </mock:shadow-root>
  <div slot="label">
    hello
  </div>
  <input class="aux-input" type="hidden" value="">
</rux-input>
`;

exports[`rux-input renders rux-icon if type is password 1`] = `
<rux-input type="password" value="">
  <mock:shadow-root>
    <div class="rux-form-field" part="form-field">
      <label aria-hidden="true" class="rux-input-label" htmlfor="rux-input-4" part="label">
        <span class="hidden">
          <slot name="label"></slot>
        </span>
      </label>
      <input aria-invalid="false" autocomplete="off" class="rux-input rux-input--medium" id="rux-input-4" type="password" value="">
      <div class="icon-container show-password">
        <rux-icon icon="visibility" part="icon" size="extra-small"></rux-icon>
      </div>
    </div>
  </mock:shadow-root>
  <input class="aux-input" type="hidden" value="">
</rux-input>
`;
